# wavetable_synth

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WavetableOscillator.cpp  WavetableOscillator.h  WavetableSynth.cpp  WavetableSynth.h
